<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.GameFinishedFragment"
    >

    <ImageView
        android:id="@+id/ivEmoji"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over"
        app:layout_constraintBottom_toTopOf="@id/tvRightAnswers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_smile"
        />

    <TextView
        android:id="@+id/tvRightAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/right_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvAllAnswers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvAllAnswers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvGameScore"
        app:layout_constraintEnd_toEndOf="@id/tvRightAnswers"
        app:layout_constraintStart_toStartOf="@id/tvRightAnswers"
        app:layout_constraintTop_toBottomOf="@id/tvRightAnswers"
        />

    <TextView
        android:id="@+id/tvGameScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/game_score"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvAllGameScore"
        app:layout_constraintEnd_toEndOf="@id/tvRightAnswers"
        app:layout_constraintStart_toStartOf="@id/tvRightAnswers"
        app:layout_constraintTop_toBottomOf="@id/tvAllAnswers"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvAllGameScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/all_score"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvPaid"
        app:layout_constraintEnd_toEndOf="@id/tvRightAnswers"
        app:layout_constraintStart_toStartOf="@id/tvRightAnswers"
        app:layout_constraintTop_toBottomOf="@id/tvGameScore"
        />

    <TextView
        android:id="@+id/tvPaid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/paid"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvRightAnswers"
        app:layout_constraintStart_toStartOf="@id/tvRightAnswers"
        app:layout_constraintTop_toBottomOf="@id/tvAllGameScore"
        />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>